--- a/public/whackamole/whack.html
+++ b/public/whackamole/whack.html
@@ -12,7 +12,7 @@
 			background-size: cover;
 		}
 		.win {
-			color: yellow;
+			color: black;
 			font-family: 'Shadows Into Light', cursive;
 			font-size: 30;
 			font-style: underline;
@@ -67,7 +67,7 @@
     	<div class="modal-dialog">
      		<div class="modal-content">
       			<div class="modal-body">
-      				<h4 class="win"><strong>You Win!</strong></h4>
+      				<h3 class="win"><strong>You Win!</strong></h3>
 		  			<img class="end" src="trexroars.gif">
 		  		</div>
 		  		<div class="modal-footer">
@@ -81,7 +81,7 @@
     	<div class="modal-dialog">
      		<div class="modal-content">
       			<div class="modal-body">
-      				<h4 class="win"><strong>You Lose!</strong></h4>
+      				<h3 class="win"><strong>You Lose!</strong></h3>
 		  			<img class="end" src="28ulcwm.gif">
 		  		</div>
 		  		<div class="modal-footer">
