Changed the lists in Education and Experience, as well as fixed minor details in WhackaLogo.

--- a/public/whackamole/whack.html
+++ b/public/whackamole/whack.html
@@ -12,7 +12,7 @@
 			background-size: cover;
 		}
 		.win {
-			color: black;
+			color: white;
 			font-family: 'Shadows Into Light', cursive;
 			font-size: 30;
 			font-style: underline;
