Font css change.

--- a/public/whackamole/whack.html
+++ b/public/whackamole/whack.html
@@ -17,6 +17,9 @@
 			font-size: 30;
 			font-style: underline;
 		}
+		.outcome {
+			color: black;
+		}
 	    .grid {
 	    	margin: auto;
 		    width: 700px;
@@ -67,7 +70,7 @@
     	<div class="modal-dialog">
      		<div class="modal-content">
       			<div class="modal-body">
-      				<h3 class="win"><strong>You Win!</strong></h3>
+      				<h3 class="outcome"><strong>You Win!</strong></h3>
 		  			<img class="end" src="trexroars.gif">
 		  		</div>
 		  		<div class="modal-footer">
@@ -81,7 +84,7 @@
     	<div class="modal-dialog">
      		<div class="modal-content">
       			<div class="modal-body">
-      				<h3 class="win"><strong>You Lose!</strong></h3>
+      				<h3 class="outcome"><strong>You Lose!</strong></h3>
 		  			<img class="end" src="28ulcwm.gif">
 		  		</div>
 		  		<div class="modal-footer">
