--- a/public/whackamole/whack.html
+++ b/public/whackamole/whack.html
@@ -90,7 +90,7 @@
 		  		</div>
 		  		<div class="modal-footer">
 		        	<a href="/whackamole/whack.html" class="btn btn-danger btn-sm">Play Again!</a>
-		        	<a href="/portfolio" class="btn btn-danger btn-sm">Portfolio</a>
+		        	<a href="/posts#portfolio" class="btn btn-danger btn-sm">Portfolio</a>
 		      	</div>
 		    </div>
 		</div>
