Problem with Javascript in Whackamole.

--- a/public/whackamole/whack.html
+++ b/public/whackamole/whack.html
@@ -133,7 +133,7 @@
 
 			$("#start").click(function() {
 				
-				$(".logo").(click(function(click) {
+				$(".logo").click(function(click) {
 				     $(this).children().fadeToggle();
 				         score++
 				         $('#score').html(score);
