Background image changed to cover.

--- a/public/whackamole/whack.html
+++ b/public/whackamole/whack.html
@@ -9,8 +9,9 @@
 		body { 
 			background-image: url('trex.jpg');
 			background-color: black;
-			background-size: 100%;
+			background-size: cover;
 			background-repeat: no-repeat;
+			@media only screen and (max-width: 320px)
 		}
 		.top {
 			margin: auto;
