--- a/public/whackamole/whack.html
+++ b/public/whackamole/whack.html
@@ -9,16 +9,11 @@
 		body { 
 			background-image: url('trex.jpg');
 			background-color: black;
+			background-position: 50% 50%;
 			background-size: cover;
 			background-repeat: no-repeat;
-			@media only screen and (max-width: 320px)
 		}
-		.top {
-			margin: auto;
-		}
-		.start {
-			margin-top: 50px;
-		}
+
 		.win {
 			color: white;
 			font-family: 'Tahoma', cursive;
@@ -46,12 +41,57 @@
 			overflow: hidden;
 		}
 
-		.timer, .score {
-	 		font-size: 30px;
-	        color: white;
-	        position: fixed;
-	        right: 10px;
+	    .rowTop {
+	    	margin-left: 20%;
+	    	width: 60%;
+	    	margin-top: 5%;
 	    }
+
+	    #start {
+	    	float: left;
+	    	margin-top: 5%;
+	    	font-size: 1.2em;
+			padding: .6em;
+			margin-bottom: .6em;
+			border: .2em solid white;
+			text-transform: uppercase;
+			color: white;
+			background-color: transparent;
+			text-decoration: none;
+			-moz-transition: all 300ms;
+			-o-transition: all 300ms;
+			-webkit-transition: all 300ms;
+			transition: all 300ms;
+		}
+
+		#start:hover {
+			cursor: pointer;
+			border: .2em solid #d84231;
+			color: white;
+			background-color: #d84231;
+			text-decoration: none;
+			-moz-transition: all 300ms;
+			-o-transition: all 300ms;
+			-webkit-transition: all 300ms;
+			transition: all 300ms; 
+		}
+
+
+	    .title {
+	    	width: 50%;
+	    	margin-left: 15%;
+	    	float: left;
+	    	text-align: center;
+	    }
+
+	    .timer {
+	    	margin-top: 3%;
+	    	color: white;
+	    	float: right;
+	    	font-size: 2em;
+	    }
+
+
 
 	</style>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
@@ -59,16 +99,17 @@
 </head>
 	<body>
 		<div class="whack">
-			<div class="row top col-md-12">
-				<div class="col-md-7 text-right">
+			<div class="rowTop">
+				<div class="start">
+					<a id="start">Begin!</a><br>
+				</div>
+				<div class="title">
 					<img src="title.png">
 					<p class="win">Must get 16pts to win!</p>
 				</div>
-				<div class="col-md-2 start">
-					<button id="start" class="btn btn-md btn-danger">Begin!</button><br>
-				</div>
-				<div class="col-md-3 text-right">
-					<div class="timer">Time: <span id="timer">00</span></div><br><br>
+				
+				<div class="timer">
+					<div class="time">Time: <span id="timer">00</span></div>
 					<div class="score">Score: <span id="score">00</span></div>
 				</div>
 			</div>
